fix: fixed mobile distortion

--- a/css/fantasy.css
+++ b/css/fantasy.css
@@ -1,12 +1,17 @@
-.fantasy-projects{
-  margin: 2rem 8rem;
+.fantasy-projects {
+  padding: 2rem 8rem;
 }
 
-.fantasy-projects h3{
+.fantasy-projects h1 {
+  text-align: center;
+  padding: 1.83rem 0;
+}
+
+.fantasy-projects h3 {
   margin: 1.83rem 0;
 }
 
-.fantasy-projects .desc{
+.fantasy-projects .desc {
   margin: 0 0 1.83rem 0;
 }
 
@@ -20,11 +25,12 @@
   position: relative;
 }
 
-.gallery-item:hover{
+.gallery-item:hover {
   cursor: pointer;
 }
 
-.gallery-img, .gallery-video {
+.gallery-img,
+.gallery-video {
   width: 100%;
   height: auto;
 }
@@ -33,4 +39,17 @@ figcaption {
   text-align: center;
   font-size: 20px;
   padding: 5px 0;
+}
+
+
+/* mobile devices */
+@media screen and (max-width: 768px) {
+  .fantasy-projects {
+    padding: 2.83rem 2rem 2rem 4rem;
+  }
+
+  .fantasy-projects h1 {
+    text-align: center;
+    padding: 1.93rem 0 .5rem 0;
+  }
 }
